--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -36,7 +36,6 @@
 	  <div id="form_widgets">
 	      
       <!-- tmpl_include test_sent_notice_widget.tmpl --> 
-      <!-- tmpl_include send_email_schedule_options_widget.tmpl -->
       <!-- tmpl_include ses_email_verification_widget.tmpl -->
       <!-- tmpl_include mass_mailing_limit_notice_widget.tmpl --> 
       <!-- tmpl_include discussion_list_support_notice_widget.tmpl --> 
@@ -57,9 +56,6 @@
         <!-- /tmpl_if -->     
     <!-- /tmpl_If -->
 
- <input type="hidden" name="s_program_url" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" />
- <input type="hidden" id="f" name="flavor" value="send_url_email" />
- <input type="hidden" name="support_files_url" id="support_files_url" value="<!-- tmpl_var SUPPORT_FILES_URL -->" />
  
 
 <!-- tmpl_unless can_use_mime_lite_html -->
@@ -84,15 +80,22 @@
 		  </pre> 
 		 </div> 
 			<!-- tmpl_else-->
-        <input type="hidden" id="draft_alert"        name="draft_alert"           value="<!-- tmpl_var draft_alert default="0" -->" />
-        <input type="hidden" id="draft_id"           name="draft_id"              value="<!-- tmpl_var draft_id -->"                /> 
-        <input type="hidden" id="draft_role"         name="draft_role"            value="<!-- tmpl_var draft_role -->"              />
-        <input type="hidden" id="restore_from_draft" name="restore_from_draft"    value="<!-- tmpl_var restore_from_draft -->"      />
 
 <!-- tmpl_include draft_notice_widget.tmpl --> 
-
+<!-- tmpl_include send_email_schedule_options_widget.tmpl -->
 <!-- tmpl_include message_headers_fieldset_widget.tmpl --> 
-	
+
+    <input type="hidden" name="s_program_url"      id="s_program_url"    value="<!-- tmpl_var S_PROGRAM_URL -->" />
+    <input type="hidden" name="flavor"            id="flavor"            value="send_url_email" />
+    <input type="hidden" name="support_files_url" id="support_files_url" value="<!-- tmpl_var SUPPORT_FILES_URL -->" />
+
+    <input type="hidden" id="draft_alert"        name="draft_alert"           value="<!-- tmpl_var draft_alert default="0" -->" />
+    <input type="hidden" id="draft_id"           name="draft_id"              value="<!-- tmpl_var draft_id -->"                /> 
+    <input type="hidden" id="save_draft_role"    name="save_draft_role"       value=""                                          />
+    <input type="hidden" id="draft_role"         name="draft_role"            value="<!-- tmpl_var draft_role -->"              />
+    <input type="hidden" id="restore_from_draft" name="restore_from_draft"    value="<!-- tmpl_var restore_from_draft -->"      />
+    
+    
 	<fieldset> 
 		 <legend>Message Body [<a href="#" onclick="$.colorbox({inline:true, href:$('#message_body_help')})">?</a>]</legend>
 
@@ -375,7 +378,9 @@
 
 <div id="top_floating_button_wrapper">
   <div id="buttons">
-	<!-- tmpl_include send_a_list_message_button_widget.tmpl -->
+      <div id="button_toolbar">
+          <input type="button" value="Loading..." class="bigger_button" />
+    </div>
   </div>
 </div>
 
