--- a/dada/templates/mass_update_profile_form.tmpl
+++ b/dada/templates/mass_update_profile_form.tmpl
@@ -1,3 +1,6 @@
+
+<!-- begin mass_update_profile_form.tmpl -->
+
 <div id="mass_updates"> 
 
 
@@ -50,3 +53,7 @@
 <!-- /tmpl_if --> 
 
 </div> 
+
+
+<!-- end mass_update_profile_form.tmpl -->
+
