--- a/dada/templates/partial_sending_options_widget.tmpl
+++ b/dada/templates/partial_sending_options_widget.tmpl
@@ -27,7 +27,7 @@
     
 <!-- tmpl_else --> 
 
-    <!-- Multiple Subscriber Fields isn't support with this backend (Apparently) --> 
+    <!-- Multiple Profile Fields isn't support with this backend (Apparently) --> 
 
 <!-- /tmpl_if --> 
 
