--- a/dada/templates/list_invite_screen.tmpl
+++ b/dada/templates/list_invite_screen.tmpl
@@ -275,7 +275,7 @@
 
 <div id="top_floating_button_wrapper">
   <div id="buttons">
-	<!-- tmpl_include send_a_list_message_button_widget.tmpl -->
+	<!-- tmpl_include `schedule_recurring_ctime_b_widget.tmpl -->
   </div>
 </div>
 
