--- a/dada/templates/mass_mail_schedules_preview.tmpl
+++ b/dada/templates/mass_mail_schedules_preview.tmpl
@@ -2,10 +2,11 @@
 
 <ul> 
     <li>
-        Current Server Time: <storng><!-- tmpl_var date --></strong>
+        Current Server Time: <strong><!-- tmpl_var date --></strong>
     </li>
     <!-- tmpl_if list_settings.schedule_last_checked_time -->
-        <li>Mass Mailing Schedules Last Checked: <!-- tmpl_var schedule_last_checked_ago --> ago.</li>
+        <li>Mass Mailing Schedules Last Checked: <strong>
+        <!-- tmpl_var schedule_last_checked_ago --></strong> ago.</li>
     <!-- tmpl_else --> 
         <li>Mass Mailing Schedules haven't ever run.</li>
     <!-- /tmpl_if -->
@@ -18,7 +19,7 @@
 
     
     <!-- tmpl_unless status --> 
-        <p>Sorry, looks like something went wrong, calculating the schedule - is there information missing?</p>
+        <p>Sorry - looks like something went wrong calculating the schedule - is there information missing?</p>
 
         <!-- tmpl_if comment --> 
     
@@ -72,8 +73,7 @@
                                 <!-- tmpl_if __last__ -->
                                 and
                                 <!-- /tmpl_if  -->
-                                <strong><!-- tmpl_var name --></strong><!-- tmpl_unless __last__ -->,
-                                <!-- /tmpl_unless --> 
+                                <strong><!-- tmpl_var name --></strong><!-- tmpl_unless __last__ -->,<!-- /tmpl_unless --> 
                             <!-- /tmpl_loop -->
                         <!-- /tmpl_if --> 
                     <!-- /tmpl_if -->
