--- a/dada/templates/send_email_archive_options_widget.tmpl
+++ b/dada/templates/send_email_archive_options_widget.tmpl
@@ -36,7 +36,11 @@
   <tr>
    <td>
     <p>
-     <input type="checkbox" name="archive_no_send" id="archive_no_send" value="1" class="ChangeMassMailingButtonLabel" />
+        <!-- tmpl_if expr="(draft_role eq 'draft')" --> 
+            <input type="checkbox" name="archive_no_send" id="archive_no_send" value="1" class="ChangeMassMailingButtonLabel" />
+        <!-- tmpl_else --> 
+            <input type="checkbox"  value="0" disabled="disabled"/>
+        <!-- /tmpl_if --> 
     </p>
    </td>
    <td>
@@ -44,22 +48,28 @@
      <label for="archive_no_send">
       Only Archive, Don't Send
      </label>
+     <!-- tmpl_unless expr="(draft_role eq 'draft')" --> 
+        <span class="disabled">
+             (Disabled - create a draft message first)
+         </span>
+     <!--/tmpl_unless -->
     </p>
+    <!-- tmpl_if expr="(draft_role eq 'draft')" --> 
     
-    <table cellpadding="0" cellspacing="0">
-     <tr>
-      <td>
-       <p>
-        <input type="checkbox" name="back_date" id="back_date" value="1" />
-        <label for="back_date">
-         Back Date:
-        </label>
-            <input type="text" name="backdate_datetime" id="backdate_datetime" />
-       </p>
-
-      </td>
-     </tr> 
-    </table> 
+        <table cellpadding="0" cellspacing="0">
+         <tr>
+          <td>
+           <p>
+                <input type="checkbox" name="back_date" id="back_date" value="1" />
+                <label for="back_date">
+                 Back Date:
+                </label>
+                    <input type="text" name="backdate_datetime" id="backdate_datetime" />
+               </p>
+          </td>
+         </tr> 
+        </table> 
+    <!-- /tmpl_if --> 
     
    </td>
   </tr>
