--- a/dada/templates/archive_screen.tmpl
+++ b/dada/templates/archive_screen.tmpl
@@ -134,7 +134,7 @@
 	<!-- tmpl_loop attachments -->
 		  
 		  <li>
-		   <a href="<!-- tmpl_var PROGRAM_URL -->?flavor=file_attachment&id=<!-- tmpl_var id -->&filename=<!-- tmpl_var name -->&list=<!-- tmpl_var list -->">
+		   <a href="<!-- tmpl_var PROGRAM_URL -->?flavor=file_attachment&id=<!-- tmpl_var id -->&list=<!-- tmpl_var list -->&filename=<!-- tmpl_var name -->">
 		   <!-- tmpl_var name -->
 		   </a>
 		  </li> 
