--- a/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
+++ b/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
@@ -6,6 +6,6 @@
 <script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?flavor=screen&screen=installer-jquery-ui-1.9.1.custom.min.js"></script>
 <script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?flavor=screen&screen=installer-jquery.validate.js"></script>
 <script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?flavor=screen&screen=dada_mail.installer.js"></script>
-<script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?flavor=screen&screen=installer-dada_mail.installer.js"></script>
+<script  type="text/javascript" src="<!-- tmpl_var Self_URL -->?flavor=screen&screen=installer-dada_mail.js"></script>
 	
 <!-- end installer_extra_javascript_widget.tmpl -->
