--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -893,7 +893,7 @@ General
       </td> 
       <td>
        <label for="send_invalid_msgs_to_owner">
-        Send the List Owner a &quot;Not a Subscriber&quot; email message, with the original message attached.
+        Send the List Owner a &quot;Not a Subscriber&quot; email message.
        </label>
       </td>
      </tr> 
