three new javascript options for magic templates, to make things work out bettered

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1195,17 +1195,33 @@ editors also have the ability to make simple HTML tables for basic layouts.
                     <input type="radio" name="template_options_replace_content_from" id="template_options_replace_content_from_class" value="class"> 
                     <label for="template_options_replace_content_from_class">css class:</label>
                     <input type="text" name="template_options_replace_class" id="template_options_replace_class" value="" />
-                    <br />
-            
+                    </p>
+                    <p><strong>Stylesheet Options</strong><br />
                     <input type="checkbox" name="template_options_add_app_css" id="template_options_add_app_css"  value="1" />
                     <label for="template_options_add_app_css">Include Dada Mail's own styles</label><br />
             
                     <input type="checkbox" name="template_options_add_custom_css" id="template_options_add_custom_css" value="1"/>
                     <label for="template_options_add_custom_css">Include a custom stylesheet:</label><br />
                     <input type="text" name="template_options_custom_css_url" id="template_options_custom_css_url" class="full" />
-        	    </p> 
-                </blockquote>
-            </div> 
+            	    </p> 
+            	    <p><strong>Javascript Options</strong><br />
+                    <label for="template_options_include_jquery_lib">
+                    <input type="checkbox" name="template_options_include_jquery_lib" id="template_options_include_jquery_lib" value="1" checked="checked" />
+                        Include a Copy of jQuery (v1.11.3)
+                    </label><br />
+                
+                    <label for="template_options_include_jqueryui_lib">
+                        <input type="checkbox" name="template_options_include_jqueryui_lib" id="template_options_include_jqueryui_lib" value="1" checked="checked" />
+                        Include a Copy of jQuery UI (v1.9.1)
+                    </label><br />
+                
+                    <label for="template_options_include_app_user_js">
+                        <input type="checkbox" name="template_options_include_app_user_js" id="template_options_include_app_user_js" value="1" checked="checked" />
+                        Include Dada Mail's JavaScript User-Facing Enhancements
+                    </label>
+                </p>
+                    </blockquote>
+                </div> 
 	
     
 		<p>
